Generate swagger doc
